--- a/src/app.css
+++ b/src/app.css
@@ -119,11 +119,15 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    cursor: default;
     }
   body {
     @apply font-sans bg-background text-foreground;
     }
   html {
     @apply font-sans;
+    }
+  input, textarea, [contenteditable="true"] {
+    cursor: text;
     }
 }
